Fix spacing for dashboard list in verified publishers

--- a/app/assets/stylesheets/application/publishers.sass
+++ b/app/assets/stylesheets/application/publishers.sass
@@ -522,6 +522,9 @@ body[data-controller="publishers"]
         color: #00bcda
         display: inline-block
       #publishers_list
+        .list-label
+          display: block
+          width: 67%
         .inline-controls
           padding: 0
         .onoffswitch
